BZ 69370: DefaultServlet's HTML listing uses incorrect labels

--- a/java/org/apache/catalina/servlets/LocalStrings_fr.properties
+++ b/java/org/apache/catalina/servlets/LocalStrings_fr.properties
@@ -43,18 +43,17 @@ cgiServlet.runStdErrFail=Problème d'entrée sortie pour le stderr
 defaultServlet.blockExternalEntity=L''accès aux entités externes avec le publicId [{0}] et le systemId [{1}] est bloqué
 defaultServlet.blockExternalEntity2=L''accès à l''entité externe nommée [{0}], publicId [{1}], baseURI [{2}], systemId [{3}] a été bloqué
 defaultServlet.blockExternalSubset=L''accès au sous-ensemble externe de nom [{0}] et de baseURI [{1}] a été bloqué
+defaultServlet.directory.parent=Jusqu''à [{0}]
+defaultServlet.directory.title=Liste du répertoire pour [{0}]
 defaultServlet.missingResource=La ressource demandée [{0}] n''est pas disponible
 defaultServlet.noResources=Pas de ressources statiques
 defaultServlet.readerCloseFailed=Impossible de fermer le lecteur
+defaultServlet.resource.lastModified=Dernière modification
+defaultServlet.resource.name=Nom
+defaultServlet.resource.size=Taille
 defaultServlet.skipfail=La lecture a échouée parce que seuls [{0}] octets étaient disponibles alors qu''il était nécessaire d''en sauter [{1}] pour atteindre le début de la plage demandée
 defaultServlet.unknownBomConfig=La valeur [{0}] inconnue a été donnée pour le paramètre d’initialisation useBomIfPresent
 defaultServlet.xslError=Erreur de transformation XSL
-
-directory.filename=Nom de fichier
-directory.lastModified=Dernière modification
-directory.parent=Jusqu''à [{0}]
-directory.size=Taille
-directory.title=Liste du répertoire pour [{0}]
 
 webdavservlet.externalEntityIgnored=La requête a inclus une référence à une entité externe avec publicId [{0}] et systemId [{1}] qui a été ignorée
 webdavservlet.inputstreamclosefail=Impossible de fermer le flux d''entrée pour [{0}]
