--- a/java/org/apache/catalina/servlets/LocalStrings_ja.properties
+++ b/java/org/apache/catalina/servlets/LocalStrings_ja.properties
@@ -43,18 +43,17 @@ cgiServlet.runStdErrFail=stderrでI/O問題
 defaultServlet.blockExternalEntity=publicId [{0}]およびsystemId [{0}]を持つ外部エンティティへのアクセスがブロックされました
 defaultServlet.blockExternalEntity2=エンティティ名 [{0}]、publicId [{1}]、baseURI [{2}] および systemId [{3}] を持つ外部エンティティへのアクセスがブロックされました
 defaultServlet.blockExternalSubset=名前[{0}]およびベースURI [{1}]を持つ外部サブセットへのアクセスがブロックされました
+defaultServlet.directory.parent=[{0}] に移動
+defaultServlet.directory.title=[{0}] のディレクトリの一覧
 defaultServlet.missingResource=要求されたリソース [{0}] は利用できません。
 defaultServlet.noResources=静的リソースが見つかりません。
 defaultServlet.readerCloseFailed=readerのクローズに失敗しました
+defaultServlet.resource.lastModified=最終更新
+defaultServlet.resource.name=名前
+defaultServlet.resource.size=サイズ
 defaultServlet.skipfail=[{1}]バイトをスキップして要求された範囲の先頭に到達する必要がありましたが、[{0}]バイトしか利用できなかったため読み取りに失敗しました。
 defaultServlet.unknownBomConfig=useBomIfPresentの初期化パラメーターに提供された認識されない値 [{0}]
 defaultServlet.xslError=XSL変換エラー
-
-directory.filename=ファイル名
-directory.lastModified=最終更新
-directory.parent=[{0}] に移動
-directory.size=サイズ
-directory.title=[{0}] のディレクトリの一覧
 
 webdavservlet.externalEntityIgnored=PublicID [{0}]およびSystemID [{1}]を持つ外部エンティティへの参照を含むリクエストが無視されました
 webdavservlet.inputstreamclosefail=入力ストリーム [{0}] を切断できません。
