--- a/java/org/apache/catalina/servlets/LocalStrings_es.properties
+++ b/java/org/apache/catalina/servlets/LocalStrings_es.properties
@@ -26,14 +26,13 @@ cgiServlet.runReaderInterrupt=Detenido esperando por el hilo lector stderr
 cgiServlet.runStdErrFail=Problemas de I/O con stderr
 
 defaultServlet.blockExternalSubset=Se bloqueó el acceso al subconjunt externo con nombre [{0}] y URI base  [{1}]\n
+defaultServlet.directory.parent=Atrás A [{0}]
+defaultServlet.directory.title=Listado de Directorio Para [{0}]
 defaultServlet.missingResource=El recurso requerido [{0}] no se encuentra disponible
+defaultServlet.resource.lastModified=Última Modificación
+defaultServlet.resource.name=Nombre
+defaultServlet.resource.size=Medida
 defaultServlet.skipfail=Sólo se han saltado [{0}] cuando se requirieron [{1}]
-
-directory.filename=Nombre de Fichero:
-directory.lastModified=Última Modificación
-directory.parent=Atrás A [{0}]
-directory.size=Medida
-directory.title=Listado de Directorio Para [{0}]
 
 webdavservlet.externalEntityIgnored=El requerimiento incluía una referencia a una entidad externa con PublicID [{0}] y SystemID [{1}] que fue ignorada
 webdavservlet.jaxpfailed=Falló la inicialización de JAXP
