--- a/java/org/apache/catalina/servlets/LocalStrings_zh_CN.properties
+++ b/java/org/apache/catalina/servlets/LocalStrings_zh_CN.properties
@@ -41,18 +41,18 @@ cgiServlet.runStdErrFail=I/O标准错误问题
 defaultServlet.blockExternalEntity=阻止访问publicId[{0}]和systemId[{0}]的外部实体。
 defaultServlet.blockExternalEntity2=阻止访问名为[{0}]、publicId[{1}]、baseURI[{2}]和systemId[{3}]的外部实体。
 defaultServlet.blockExternalSubset=用名称[{0}]和baseURI[{1}]阻止对外部子集的访问
+defaultServlet.directory.parent=最多[{0}]
+defaultServlet.directory.title=[{0}]的目录列表
 defaultServlet.missingResource=请求的资源[{0}]不可用
 defaultServlet.noResources=找不到静态资源
 defaultServlet.readerCloseFailed=无法关闭读卡器
+defaultServlet.resource.lastModified=上次修改时间。
+defaultServlet.resource.name=姓名
+defaultServlet.resource.size=大小
 defaultServlet.skipfail=读取失败，因为只有[{0}]个字节可用，但需要跳过[{1}]个字节才能到达请求范围的开始
 defaultServlet.unknownBomConfig=为useBomIfPresent初始化参数提供的[{0}]值无法识别
 defaultServlet.xslError=XSL转换器错误
 
-directory.filename=文件名
-directory.lastModified=上次修改时间。
-directory.parent=最多[{0}]
-directory.size=大小
-directory.title=[{0}]的目录列表
 
 webdavservlet.externalEntityIgnored=请求包含对PublicID[{0}]和SystemID[{1}]的外部实体的引用，该引用被忽略。
 webdavservlet.inputstreamclosefail=无法关闭[{0}]的输入流
