--- a/java/org/apache/catalina/util/LocalStrings_zh_CN.properties
+++ b/java/org/apache/catalina/util/LocalStrings_zh_CN.properties
@@ -53,3 +53,4 @@ sessionIdGeneratorBase.randomAlgorithm=使用算法[{0}]初始化随机数生成
 sessionIdGeneratorBase.randomProvider=使用程序提供的初始化随机数生成器异常[{0}]
 
 timebucket.maintenance.error=定期维护时出现错误
+exactRateLimiter.maintenance.error=定期维护时出现错误
