ExpiresFilter add more should-not-cacheable verification
skip response with Cache-Control: no-store.
enhance cacheable verification: add configuration for cacheable methods, supported status codes(included list).

--- a/java/org/apache/catalina/filters/LocalStrings_zh_CN.properties
+++ b/java/org/apache/catalina/filters/LocalStrings_zh_CN.properties
@@ -29,6 +29,9 @@ corsFilter.wrongType2=期望类型为[{0}]或[{1}]的HttpServletRequest对象
 csrfPrevention.invalidRandomClass=不能使用class [{0}]创建随机源。
 
 expiresFilter.exceptionProcessingParameter=异常处理配置参数[{0}]：[{1}]
+expiresFilter.skippedMethod=请求[{0}]的响应状态为[{1}]内容类型[{2}]，跳过给定的HTTP方法[{3}]
+expiresFilter.noStoreAlreadyDefined=请求[{0}]的响应状态为[{1}]内容类型[{2}]，已经定义了缓存控制no-store
+expiresFilter.notCacheableStatusCode=请求[{0}]的响应状态为[{1}]内容类型[{2}]，给定状态不支持过期头生成
 expiresFilter.expirationHeaderAlreadyDefined=请求[{0}]的响应状态为[{1}]内容类型[{2}]，已经定义了到期标头
 expiresFilter.filterInitialized=使用配置[{0}]初始化的筛选器
 expiresFilter.invalidDurationNumber=指令[{1}]中的持续时间（数字）[{0}]无效
@@ -40,7 +43,7 @@ expiresFilter.noExpirationConfiguredForContentType=没有为 content-type [{0}] 
 expiresFilter.numberError=分析逗号分隔列表[{1}]中位置[{0}]（基于零）处的数字时发生异常
 expiresFilter.responseAlreadyCommitted=请求[{0}]，无法对已提交的响应应用ExpiresFilter。
 expiresFilter.setExpirationDate=请求[{0}]，响应状态为[{1}]，内容类型为[{2}]，设置过期日期[{3}]
-expiresFilter.skippedStatusCode=请求[{0}]，响应状态为[{1}]，内容类型为[{1}]，跳过给定状态的过期头生成。
+expiresFilter.skippedStatusCode=请求[{0}]，响应状态为[{1}]，内容类型为[{2}]，跳过给定状态的过期头生成。
 expiresFilter.startingPointInvalid=在指令[{1}]中无效的起点(访问|现在|修改|a<秒>|m<秒>)[{0}]
 expiresFilter.startingPointNotFound=起始点（access|now|modification|a<seconds>|m<seconds>）未在指令[{0}]中找到
 expiresFilter.unknownParameterIgnored=忽略值为[{1}]的未知参数[{0}]！
