Improvements to German translations (remm)

--- a/java/org/apache/tomcat/util/scan/LocalStrings_de.properties
+++ b/java/org/apache/tomcat/util/scan/LocalStrings_de.properties
@@ -17,6 +17,6 @@
 # To edit translations see: https://tomcat.apache.org/getinvolved.html#Translations
 
 jarScan.classPath.badEntry=Der Classpath Eintrag [{0}] konnte nicht in eine URL gewandelt werden
-jarScan.classloaderFail=Fehler beim Scannen von [{0}] aus der Classloader Historie
+jarScan.classloaderFail=Fehler beim Scannen von [{0}] aus der Classloader-Hierarchie
 jarScan.classloaderJarNoScan=Werde auf Datei [{0}] aus dem Classpath kein JAR Scanning durchführen
 jarScan.webinflibStart=Durchsuche /WEB-INF/lib nach JARs
