--- a/java/org/apache/catalina/authenticator/jaspic/LocalStrings_fr.properties
+++ b/java/org/apache/catalina/authenticator/jaspic/LocalStrings_fr.properties
@@ -32,6 +32,7 @@ jaspicAuthenticator.authenticate=Authentification de la requête pour [{0}] avec
 
 persistentProviderRegistrations.deleteFail=Le fichier temporaire [{0}] n''a pas pu être effacé
 persistentProviderRegistrations.existsDeleteFail=Le fichier temporaire [{0}] existe déjà et ne peut être effacé
+persistentProviderRegistrations.mkdirsFail=Le répertoire [{0}] des enregistrements de fournisseur de persistence ne peut pas être crée
 persistentProviderRegistrations.moveFail=Echec de déplacement de [{0}] vers [{1}]
 persistentProviderRegistrations.xmlFeatureEncoding=Exception lors de la configuration de JASPIC pour permettre des nom d'encodage Java dans les fichiers de configuration XML, seuls les noms d'encodage IANA seront supportés
 
