Improvements to French translations. (remm)

--- a/java/org/apache/catalina/filters/LocalStrings_fr.properties
+++ b/java/org/apache/catalina/filters/LocalStrings_fr.properties
@@ -34,11 +34,13 @@ csrfPrevention.rejectNoCache=La requête pour [{0}] avec la session [{1}] est re
 csrfPrevention.rejectNoNonce=La requête pour [{0}] avec la session [{1}] est rejetée car aucun CSRF nonce n''a été trouvé
 csrfPrevention.unsupportedPattern=Le modèle [{0}] n''est pas supporté
 
+expiresFilter.cacheControlNoStore=Requête [{0}] avec le statut de réponse [{1}] content-type [{2}], Cache-Control: l''en tête no-store a déjà été défini
 expiresFilter.exceptionProcessingParameter=Erreur lors du traitement du paramètre de configuration [{0}] : [{1}]
 expiresFilter.expirationHeaderAlreadyDefined=Requête [{0}] de statut de réponse [{1}] et de type de contenu ("content-type") [{2}], en-tête d''expiration déjà défini
 expiresFilter.filterInitialized=Le filtre a été initialisé avec la configuration [{0}]
 expiresFilter.invalidDurationNumber=Durée (nombre) invalide [{0}] dans la directive [{1}]
 expiresFilter.invalidDurationUnit=Unité de durée invalide (years|months|weeks|days|hours|minutes|seconds) [{0}] dans la directive [{1}]
+expiresFilter.invalidMethod=Requête [{0}] avec la méthode [{1}], la méthode n''est pas cachable
 expiresFilter.noDurationFound=La durée n''a pas été trouvée dans la directive [{0}]
 expiresFilter.noDurationUnitAfterAmount=L''unité de durée n''a pas été trouvée après le nombre [{0}] dans la directive [{1}]
 expiresFilter.noExpirationConfigured=Requête [{0}] avec statut de réponse [{1}] et content-type [{2}], pas d''expiration configurée
