--- a/java/org/apache/tomcat/util/http/LocalStrings_fr.properties
+++ b/java/org/apache/tomcat/util/http/LocalStrings_fr.properties
@@ -43,3 +43,6 @@ rfc6265CookieProcessor.invalidAttributeValue=Un valeur d''attribut invalide [{0}
 rfc6265CookieProcessor.invalidCharInValue=Un caractère invalide [{0}] était présent dans la valeur du cookie
 rfc6265CookieProcessor.invalidDomain=Un domaine [{0}] invalide a été spécifié pour ce cookie
 rfc6265CookieProcessor.invalidPath=Un chemin (path) invalide [{0}] a été spécifié pour ce biscuit (cookie)
+
+webdavifheader.ioError=Erreur lors de la réinitialisation du flux pour trouver [{0}]
+webdavifheader.unexpectedCharacter=Caractère inattendu [{0}] dans l''état [{1}], attendu un parmi [{2}]
