--- a/java/org/apache/tomcat/util/net/openssl/panama/LocalStrings_fr.properties
+++ b/java/org/apache/tomcat/util/net/openssl/panama/LocalStrings_fr.properties
@@ -86,6 +86,7 @@ opensslconf.finishFailed=OpenSSLConf s''est terminé en échec avec le résultat
 opensslconf.noCommandName=Pas de nom de commande OpenSSLConf (valeur [{0}]), cela sera ignoré
 opensslconf.resultCommand=La commande OpenSSLConf (nom [{0}] valeur [{1}]) a retourné [{2}]
 opensslconf.unknownCommandType=La commande SSL_CONF [{0}] est de type inconnu
+opensslconf.unsupported=Cette implémentation OpenSSL ne supporte pas OpenSSLConf
 
 openssllibrary.ciphersFailure=Echec en essayant d'obtenir la liste des chiffres
 openssllibrary.currentFIPSMode=Mode FIPS actuel : [{0}]
