--- a/java/org/apache/catalina/servlets/LocalStrings_fr.properties
+++ b/java/org/apache/catalina/servlets/LocalStrings_fr.properties
@@ -58,3 +58,7 @@ defaultServlet.xslError=Erreur de transformation XSL
 webdavservlet.externalEntityIgnored=La requête a inclus une référence à une entité externe avec publicId [{0}] et systemId [{1}] qui a été ignorée
 webdavservlet.inputstreamclosefail=Impossible de fermer le flux d''entrée pour [{0}]
 webdavservlet.jaxpfailed=Erreur d'initialisation de JAXP
+webdavservlet.memorystore=Un stockage en mémoire non persistant sera utilisé pour les propriétés personnalisées; le paramètre d'initialisation 'propertyStore' du Servlet peut être utilisé pour configurer un stockage en fournissant une classe implémentant l'interface 'WebdavServlet.PropertyStore'
+webdavservlet.noStoreParameter=Le paramètre d''initialisation [{0}] avec la valeur [{1}] n''a pas été trouvé sur le stockage configuré
+webdavservlet.nonWildcardMapping=Le mapping [{0}] n''est pas un mapping d''extension et ne devrait pas être utilisé pour le Servlet WebDAV
+webdavservlet.storeError=Erreur lors de la création du stockage avec la classe [{0}], le stockage en mémoire par défaut sera utilisé
