--- a/java/org/apache/catalina/webresources/LocalStrings_fr.properties
+++ b/java/org/apache/catalina/webresources/LocalStrings_fr.properties
@@ -29,11 +29,14 @@ cache.addFail=Incapable d''ajouter la ressource située [{0}] au cache de l''app
 cache.backgroundEvictFail=Le processus d''arrière plan d''éviction du cache n''a pas pu nettoyer [{0}] pourcents du cache pour le contexte [{1}], il faudrait augmenter la taille maximale du cache ; après l''éviction, approximativement [{2}] KiB de données restaient dans le cache
 cache.objectMaxSizeTooBig=La valeur [{0}] KiB pour l''objectMaxSize est plus grade que la limite de maxSize/20 son elle a été réduite à [{1}] KiB\n
 cache.objectMaxSizeTooBigBytes=La valeur de taille d''objet maximale pouvant être mis en cache de [{0}] KiB est supérieure à Integer.MAX_VALUE qui est le maximum, la limite a donc été fixée à Integer.MAX_VALUE octets
+cache.sizeTracking.add=Augmentation de la taille du cache de [{0}] pour l''entrée [{1}] à [{2}] portant la taille totale du cache à [{3}]
+cache.sizeTracking.removed=Diminution de la taille du cache de [{0}] pour l''entrée [{1}] à [{2}] portant la taille totale du cache à [{3}]
 
 cachedResource.invalidURL=La création d''une instance de CachedResourceURLStreamHandler a échouée car l''URL [{0}] est malformée
 
 classpathUrlStreamHandler.notFound=Impossible de charger la ressource [{0}] en utilisant le chargeur de classe de contexte du thread ou celui de la classe actuelle
 
+dirResourceSet.isCaseSensitive.fail=Erreur en essayant de déterminer si le système de fichier à [{0}] est sensible à la casse des caractères, il sera considéré non sesnible
 dirResourceSet.manifestFail=Impossible de lire le manifeste depuis [{0}]
 dirResourceSet.notDirectory=Le répertoire qui a été spécifié pour la base et le chemin interne [{0}]{1}[{2}] n''existe pas
 dirResourceSet.writeNpe=Le flux d'entrée ne peut pas être null
