--- a/java/org/apache/coyote/http11/LocalStrings_fr.properties
+++ b/java/org/apache/coyote/http11/LocalStrings_fr.properties
@@ -25,6 +25,7 @@ abstractHttp11Protocol.upgradeJmxRegistrationFail=Impossible d'enregistrer le pr
 http11processor.fallToDebug=\n\
 \ Note : les occurrences suivantes d'erreurs d'analyse de requête HTTP seront enregistrées au niveau DEBUG.
 http11processor.header.parse=Erreur lors de l'analyse d'un en-tête de requête HTTP
+http11processor.noParser=Aucun HttpParser n'a été trouvé pour le gestionnaire du protocole HTTP, il devrait être crée lors de son initialisation
 http11processor.request.alreadyChunked=Erreur lors de la préparation de la requête, l''encodage de transfert liste chunked avant [{0}]
 http11processor.request.finish=Erreur en terminant la requête
 http11processor.request.inconsistentHosts=L'hôte spécifié dans la ligne de requête ne correspond pas à celui de l'en-tête hôte
