Improvements to Chinese translations.

--- a/java/org/apache/catalina/manager/LocalStrings_zh_CN.properties
+++ b/java/org/apache/catalina/manager/LocalStrings_zh_CN.properties
@@ -106,7 +106,7 @@ htmlManagerServlet.osKernelTime=内核处理时间：
 htmlManagerServlet.osMemoryLoad=加载内存：
 htmlManagerServlet.osPhysicalMemory=物理内存
 htmlManagerServlet.osTotalPageFile=最大页文件：
-htmlManagerServlet.osUserTime=用户态处理实际：
+htmlManagerServlet.osUserTime=用户态处理时间：
 htmlManagerServlet.serverHostname=主机名
 htmlManagerServlet.serverIPAddress=IP地址
 htmlManagerServlet.serverJVMVendor=JVM提供商
