Improvements to Japanese translations by tak7iji.

--- a/java/org/apache/catalina/servlets/LocalStrings_ja.properties
+++ b/java/org/apache/catalina/servlets/LocalStrings_ja.properties
@@ -58,3 +58,7 @@ defaultServlet.xslError=XSL変換エラー
 webdavservlet.externalEntityIgnored=PublicID [{0}]およびSystemID [{1}]を持つ外部エンティティへの参照を含むリクエストが無視されました
 webdavservlet.inputstreamclosefail=入力ストリーム [{0}] を切断できません。
 webdavservlet.jaxpfailed=JAXPの初期化に失敗しました
+webdavservlet.memorystore=非永続メモリ ストレージが無効なプロパティに使用されます。サーブレットの 'propertyStore' 初期化パラメータを使用して、'WebdavServlet.PropertyStore' インターフェースを実装するカスタムストアを構成できます。
+webdavservlet.noStoreParameter=値 [{1}] を持つ初期パラメータ [{0}] が構成されたストアに見つかりませんでした
+webdavservlet.nonWildcardMapping=マッピング [{0}] はワイルドカードマッピングではないため、WebDAV サーブレットには使用しないでください
+webdavservlet.storeError=クラス [{0}] のストアの作成中にエラーが発生しました。代わりにデフォルトのメモリストアが使用されます
