--- a/java/org/apache/catalina/webresources/LocalStrings_ja.properties
+++ b/java/org/apache/catalina/webresources/LocalStrings_ja.properties
@@ -29,11 +29,14 @@ cache.addFail=有効期限切れの項目を破棄しても利用可能な領域
 cache.backgroundEvictFail=コンテキスト [{1}] のバックグラウンドキャッシュ削除処理は全体の [{0}] % を解放できませんでした。キャッシュサイズの最大値の増加を検討してください。現在は約 [{2}] KiB のデータがキャッシュに残存しています。
 cache.objectMaxSizeTooBig=objectMaxSizeの [{0}] KiBの値がmaxSize / 20の制限より大きいため、[{1}] KiBに減少しました
 cache.objectMaxSizeTooBigBytes=キャッシュ可能なオブジェクトサイズの最大値に指定された [{0}] KiB は Integer.MAX_VALUE バイトを越えています。最大値に Integer.MAX_VALUE を設定します。
+cache.sizeTracking.add=[{2}] のキャッシュエントリ[{1}] のキャッシュサイズが [{0}] に増えたため、合計キャッシュサイズは [{3}] になりました
+cache.sizeTracking.removed=[{2}] のキャッシュエントリ [{1}] のキャッシュサイズが [{0}] に減ったため、合計キャッシュサイズは [{3}] になりました
 
 cachedResource.invalidURL=URL [{0}] は不正です。CachedResourceURLStreamHandler インスタンスを生成できません
 
 classpathUrlStreamHandler.notFound=スレッドコンテキストクラスローダー、あるいは、現在のクラスのクラスローダーでリソース [{0}] を読み込みできません
 
+dirResourceSet.isCaseSensitive.fail=[{0}] のファイル システムで大文字と小文字が区別されるかどうかを判断しようとしたときにエラーが発生したため、大文字と小文字が区別されないと仮定しています
 dirResourceSet.manifestFail=[{0}]からマニフェストを読み込めませんでした。
 dirResourceSet.notDirectory=ベースパスと内部パスで指定した [{0}][{1}][{2}] にディレクトリがありません。
 dirResourceSet.writeNpe=入力ストリームには null を指定できません。
