--- a/java/org/apache/coyote/http11/LocalStrings_ja.properties
+++ b/java/org/apache/coyote/http11/LocalStrings_ja.properties
@@ -25,6 +25,7 @@ abstractHttp11Protocol.upgradeJmxRegistrationFail=JMXにアップグレードプ
 http11processor.fallToDebug=\n\
 \ 注: 以降のHTTPリクエスト構文解析エラーの発生はDEBUGレベルでログに出力されます。
 http11processor.header.parse=HTTP リクエストヘッダーを解析中のエラー
+http11processor.noParser=HTTP プロトコル ハンドラーに HttpParser が見つかりませんでした。初期化時に作成する必要があります
 http11processor.request.alreadyChunked=リクエストの準備中にエラーが発生しました。Transfer-Encoding には [{0}] より前に chunked があります
 http11processor.request.finish=リクエスト終了処理エラー
 http11processor.request.inconsistentHosts=リクエスト行に指定されたホストが Host ヘッダーの値と矛盾しています。
