--- a/java/org/apache/tomcat/util/buf/LocalStrings_ja.properties
+++ b/java/org/apache/tomcat/util/buf/LocalStrings_ja.properties
@@ -36,6 +36,11 @@ hexUtils.fromHex.oddDigits=入力は、偶数の16進数で構成する必要が
 stringCache.byteTime=ByteCache 生成時間: {0}ms
 stringCache.charTime=CharCache 生成時間: {0}ms
 
+toStringUtil.classpath.classloader=ClassLoader [{0}] がクラスをロードしています:
+toStringUtil.classpath.header=ClassNotFoundException のデバッグを支援するために、階層内の各クラスローダーのクラスパスをログに記録します
+toStringUtil.classpath.platform=JRE提供クラス
+toStringUtil.classpath.unknown=Unknown - URLClassLoader のインスタンスではありません
+
 uDecoder.eof=予期せぬ場所で終端に達しました。
 uDecoder.isHexDigit=16進エンコーディングが無効です
 uDecoder.noSlash="/" を符号化して含めることはできません。
