--- a/java/org/apache/tomcat/util/net/openssl/panama/LocalStrings_ja.properties
+++ b/java/org/apache/tomcat/util/net/openssl/panama/LocalStrings_ja.properties
@@ -86,6 +86,7 @@ opensslconf.finishFailed=OpenSSLConf の終了が結果 [{0}] で失敗しまし
 opensslconf.noCommandName=OpenSSLConf コマンド名がありません - 無視されます (コマンド値 [{0}])
 opensslconf.resultCommand=OpenSSLConf コマンド (name [{0}], value [{1}]) は[{2}]を返しました
 opensslconf.unknownCommandType=SSL_CONFコマンド [{0}]タイプが不明です
+opensslconf.unsupported=OpenSSL実装はOpenSSLConfをサポートしていません
 
 openssllibrary.ciphersFailure=暗号リストの取得に失敗しました
 openssllibrary.currentFIPSMode=現在のFIPSモード: [{0}]
