Improvements to French translations. (remm)

--- a/java/org/apache/tomcat/util/buf/LocalStrings_fr.properties
+++ b/java/org/apache/tomcat/util/buf/LocalStrings_fr.properties
@@ -38,6 +38,11 @@ messageBytes.illegalCharacter=Le caractère Unicode [{0}] ayant le code point [{
 stringCache.byteTime=Temps de génération du ByteCache: {0}ms
 stringCache.charTime=Temps de génération du CharCache: {0}ms
 
+toStringUtil.classpath.classloader=ClassLoader [{0}] chargement des classes à partir de:
+toStringUtil.classpath.header=Journalisation du chemin de classe pour chaque chargeur de classe dans la hiérarchie pour aider au déboggage de ClassNotFoundException
+toStringUtil.classpath.platform=Classes fournies par le JRE
+toStringUtil.classpath.unknown=Inconnu - n'est pas une instance de URLClassLoader
+
 uDecoder.eof=Fin de fichier (EOF)
 uDecoder.isHexDigit=L'encodage hexadécimal est invalide
 uDecoder.noSlash=Un caractère slash encodé n'est pas autorisé
