Improvements to Japanese translations by tak7iji.

--- a/java/org/apache/tomcat/util/http/LocalStrings_ja.properties
+++ b/java/org/apache/tomcat/util/http/LocalStrings_ja.properties
@@ -46,3 +46,6 @@ rfc6265CookieProcessor.expectedBytes=Cookie を文字列として解析中、期
 rfc6265CookieProcessor.invalidCharInValue=無効な文字[{0}]がCookie値に存在します。
 rfc6265CookieProcessor.invalidDomain=cookie に不正なドメイン [{0}] が指定されました。
 rfc6265CookieProcessor.invalidPath=Cookie の path 属性に無効な値 [{0}] が指定されました。
+
+webdavifheader.ioError=[{0}] のいずれかのキャッチアップで IOException が発生しました
+webdavifheader.unexpectedCharacter=状態 [{1}] に予期しない文字 [{0}] があります。[{2}] のいずれかが期待されます
