Back-port missing translations

--- a/java/org/apache/coyote/http2/LocalStrings_fr.properties
+++ b/java/org/apache/coyote/http2/LocalStrings_fr.properties
@@ -88,6 +88,7 @@ http2Protocol.jmxRegistration.fail=L'enregistrement dans JMX du protocole HTTP/2
 
 pingManager.roundTripTime=Connection [{0}] Le temps d''aller retour est de [{1}]ns
 
+stream.clientResetRequest=Le client a réinitialisé la stream avant qu'elle ait été complètement lue
 stream.closed=Connection [{0}], Flux [{1}], Impossible d''écrire sur un flux après sa fermeture
 stream.header.case=Connection [{0}], Flux [{1}], Le nom d''en-tête HTTP [{2}] doit être en miniscules
 stream.header.connection=Connection [{0}], Flux [{1}], L''en-tête HTTP [{2}] n''est pas autorisé dans une requête HTTP/2
@@ -111,6 +112,8 @@ stream.inputBuffer.signal=Des données ont été ajoutées dans inBuffer alors q
 stream.inputBuffer.swallowUnread=[{0}] bytes qui ont été auparavant lu dans le tampon d''entrée ont été avalés
 stream.notWritable=Connection [{0}], Flux [{1}], Impossible d''écrire sur ce flux
 stream.outputBuffer.flush.debug=Connection [{0}], Flux [{1}], envoi des données mises en tampon depuis la position [{2}], writeInProgress [{3}] et closed [{4}]
+stream.recycle.duplicate=Connection [{0}], Stream [{1}] Une tentative de double recyclage de la requête et de la réponse associées a été ignorée
+stream.recycle.first=Connection [{0}], Stream [{1}] La requête et la réponse associées ont été recyclées
 stream.reset.fail=Connection [{0}], Flux [{1}], Echec de réinitialisation du flux
 stream.reset.receive=Connection [{0}], Flux [{1}], Réinitialisation reçue à cause de [{2}]
 stream.reset.send=Connection [{0}], Flux [{1}], Réinitialisation envoyée à cause de [{2}]
@@ -130,6 +133,7 @@ streamStateMachine.invalidReset=Connection [{0}], Stream [{1}], la Stream ne doi
 
 upgradeHandler.allocate.debug=Connection [{0}], Flux [{1}], [{2}] octets alloués
 upgradeHandler.allocate.left=Connection [{0}], Flux [{1}], [{2}] octets désalloués, essai d''allocation aux enfants
+upgradeHandler.clientCancel=Le client a réinitialisé la stream avant que la réponse ne soit complète
 upgradeHandler.connectionError=Erreur de la connection
 upgradeHandler.enableRfc7450Priorities=Connection [{0}], les priorités RFC 7450 ne doivent pas être activées après avoir été désactivées dans la trame initiale des paramètres de connection (voir la RFC 9218)
 upgradeHandler.fallToDebug=\n\
@@ -148,6 +152,8 @@ upgradeHandler.pruneIncomplete=Connexion [{0}], Flux [{1}], Erreur lors de l''é
 upgradeHandler.pruneStart=Connection [{0}] Début de l''élimination des anciens flux, la limite est de [{1}] et il y a actuellement [{2}] flux
 upgradeHandler.pruned=Connection [{0}] Elimination du flux terminé [{1}]
 upgradeHandler.releaseBacklog=Connection [{0}], Flux [{1}] enlevée de la file d''attente
+upgradeHandler.replace.duplicate=Connection [{0}], Stream [{1}] Une tentative de double remplacement de la stream par son implémentation légère a été ignorée
+upgradeHandler.replace.first=Connection [{0}], Stream [{1}] Remplacement par l''implémentation légère de stream
 upgradeHandler.reset.receive=Connection [{0}], Stream [{1}], Reset a été reçu à cause de [{2}]
 upgradeHandler.rst.debug=Connexion [{0}], Flux [{1}], Erreur [{2}], Message [{3}], RST (fermeture du flux)
 upgradeHandler.sendPrefaceFail=Connexion [{0}], échec d''envoi de la préface au client
