--- a/java/org/apache/coyote/http2/LocalStrings_zh_CN.properties
+++ b/java/org/apache/coyote/http2/LocalStrings_zh_CN.properties
@@ -125,6 +125,7 @@ streamStateMachine.invalidFrame=连接[{0}]、流[{1}]、状态[{2}]、帧类型
 
 upgradeHandler.allocate.debug=连接[{0}]，流[{1}]，已分配[{2}]字节
 upgradeHandler.allocate.left=连接[{0}]，流[{1}]，[{2}]字节未分配 - 尝试分配给子项
+upgradeHandler.clientCancel=客户端在响应完成前重置了数据流
 upgradeHandler.connectionError=连接错误
 upgradeHandler.fallToDebug=注意：往后出现 HTTP/2 流的错误将以 DEBUG 日志级别输出。
 upgradeHandler.goaway.debug=连接[{0}]，离开，最后的流[{1}]，错误码[{2}]，调试数据[{3}]
