--- a/java/org/apache/catalina/webresources/LocalStrings_fr.properties
+++ b/java/org/apache/catalina/webresources/LocalStrings_fr.properties
@@ -30,7 +30,7 @@ cache.backgroundEvictFail=Le processus d''arrière plan d''éviction du cache n'
 cache.objectMaxSizeTooBig=La valeur [{0}] KiB pour l''objectMaxSize est plus grade que la limite de maxSize/20 son elle a été réduite à [{1}] KiB\n
 cache.objectMaxSizeTooBigBytes=La valeur de taille d''objet maximale pouvant être mis en cache de [{0}] KiB est supérieure à Integer.MAX_VALUE qui est le maximum, la limite a donc été fixée à Integer.MAX_VALUE octets
 cache.sizeTracking.add=Augmentation de la taille du cache de [{0}] pour l''entrée [{1}] à [{2}] portant la taille totale du cache à [{3}]
-cache.sizeTracking.removed=Diminution de la taille du cache de [{0}] pour l''entrée [{1}] à [{2}] portant la taille totale du cache à [{3}]
+cache.sizeTracking.remove=Diminution de la taille du cache de [{0}] pour l''entrée [{1}] à [{2}] portant la taille totale du cache à [{3}]
 
 cachedResource.invalidURL=La création d''une instance de CachedResourceURLStreamHandler a échouée car l''URL [{0}] est malformée
 
