--- a/java/org/apache/coyote/http2/LocalStrings_zh_CN.properties
+++ b/java/org/apache/coyote/http2/LocalStrings_zh_CN.properties
@@ -29,7 +29,7 @@ connectionSettings.debug=连接[{0}]，参数类型[{1}]设置为[{2}]
 connectionSettings.enablePushInvalid=连接[{0}]，请求的enable push[{1}]值不是允许的值之一（零或一）
 connectionSettings.headerTableSizeLimit=连接 [{0}]，尝试将 header 表大小设置为 [{1}]，但限制为 16k
 connectionSettings.maxFrameSizeInvalid=连接[{0}]，请求的最大帧大小[{1}]在[{2}]到[{3}]的允许范围之外
-connectionSettings.unknown=连接[{0}]，标识为[{1}]和值为[{2}]的未知设置被忽略
+connectionSettings.unknown=连接[{0}]，标识为[{1}]和值为[{2}]的未知设置被忽略, ip [{3}]
 connectionSettings.windowSizeTooBig=连接[{0}]，请求窗口大小[{0}]，大于最大允许的值[{1}]
 
 frameType.checkPayloadSize=对帧类型[{1}]来说，负载[{0}]是无效的
