Improvements to French translations. (remm)

--- a/java/org/apache/catalina/servlets/LocalStrings_fr.properties
+++ b/java/org/apache/catalina/servlets/LocalStrings_fr.properties
@@ -45,6 +45,8 @@ defaultServlet.blockExternalEntity2=L''accès à l''entité externe nommée [{0}
 defaultServlet.blockExternalSubset=L''accès au sous-ensemble externe de nom [{0}] et de baseURI [{1}] a été bloqué
 defaultServlet.directory.parent=Jusqu''à [{0}]
 defaultServlet.directory.title=Liste du répertoire pour [{0}]
+defaultServlet.globalXSLTTooBig=Le fichier XSLT global [{0}] est trop grand pour être mis en tampon
+defaultServlet.invalidRedirectStatusCode=Le code de statut de redirection [{0}] est invalide
 defaultServlet.missingResource=La ressource demandée [{0}] n''est pas disponible
 defaultServlet.noResources=Pas de ressources statiques
 defaultServlet.readerCloseFailed=Impossible de fermer le lecteur
