--- a/java/org/apache/catalina/startup/LocalStrings_fr.properties
+++ b/java/org/apache/catalina/startup/LocalStrings_fr.properties
@@ -75,6 +75,7 @@ contextConfig.invalidSciHandlesTypes=Impossible de charger la classe [{0}] pour 
 contextConfig.jarFile=Impossible de traiter les annotations du JAR [{0}]
 contextConfig.jspFile.error=Le fichier JSP [{0}] doit commencer par un ''/''
 contextConfig.jspFile.warning=WARNING : Le fichier JSP [{0}] doit commencer par un  ''/'' dans l''API Servlet 2.4
+contextConfig.loadError=Erreur lors du chargement du code généré
 contextConfig.missingRealm=Aucun royaume (realm) n'a été configuré pour réaliser l'authentification
 contextConfig.noAntiLocking=La valeur [{0}] configurée pour java.io.tmpdir ne correspond pas à un répertoire valide, le paramètre antiResourceLocking configuré pour l''application [{1}] sera ignoré
 contextConfig.noJsp=Le groupe de propriétés JSP pour l''URL [{0}] sera sauté, le Servlet JSP avec le nom [{1}] n''a pas été trouvé
