Improvements to Japanese translations by tak7iji.

--- a/java/org/apache/catalina/servlets/LocalStrings_ja.properties
+++ b/java/org/apache/catalina/servlets/LocalStrings_ja.properties
@@ -45,6 +45,8 @@ defaultServlet.blockExternalEntity2=エンティティ名 [{0}]、publicId [{1}]
 defaultServlet.blockExternalSubset=名前[{0}]およびベースURI [{1}]を持つ外部サブセットへのアクセスがブロックされました
 defaultServlet.directory.parent=[{0}] に移動
 defaultServlet.directory.title=[{0}] のディレクトリの一覧
+defaultServlet.globalXSLTTooBig=グローバル XSLT ファイル [{0}] はバッファリングするには大きすぎます
+defaultServlet.invalidRedirectStatusCode=無効なリダイレクトステータス コード [{0}]
 defaultServlet.missingResource=要求されたリソース [{0}] は利用できません。
 defaultServlet.noResources=静的リソースが見つかりません。
 defaultServlet.readerCloseFailed=readerのクローズに失敗しました
