--- a/java/org/apache/catalina/startup/LocalStrings_ja.properties
+++ b/java/org/apache/catalina/startup/LocalStrings_ja.properties
@@ -75,6 +75,7 @@ contextConfig.invalidSciHandlesTypes=1つ以上のServletContentInitializersの@
 contextConfig.jarFile=Jar [{0}] のアノテーションを処理できません
 contextConfig.jspFile.error=JSPファイル [{0}] は''/''で始まらなければいけません
 contextConfig.jspFile.warning=警告: Servlet 2.4ではJSPファイル [{0}] は''/''で始まらなければいけません
+contextConfig.loadError=生成されたコードのロード中にエラーが発生しました
 contextConfig.missingRealm=認証するためにレルムが設定されていません
 contextConfig.noAntiLocking=java.io.tmpdirに設定された値[{0}]が有効なディレクトリを指していません。 Webアプリケーション[{1}]のantiResourceLocking設定は無視されます。
 contextConfig.noJsp=URL [{0}] の JSP プロパティ グループをスキップしています。名前 [{1}] の JSP サーブレットが見つかりません
