Improvements to Chinese translations by leeyazhou.

--- a/java/jakarta/el/LocalStrings_zh_CN.properties
+++ b/java/jakarta/el/LocalStrings_zh_CN.properties
@@ -46,6 +46,7 @@ propertyNotReadable=属性 [{1}] 在类型 [{0}] 上不可读
 propertyNotWritable=属性 [{1}] 在类型 [{0}] 上不可写
 propertyReadError=在类型 [{0}] 上读取 [{1}] 时出错
 propertyWriteError=在类型 [{0}] 上写入 [{1}] 时出错
+resolverNotWritable=类型[{0}]的ELResolver不可写入
 
 staticFieldELResolver.methodNotFound=在类 [{1}] 上，找不到名为 [{0}] 的匹配公共静态方法
 staticFieldELResolver.notFound=在（导出的 Java 9+ ）类 [{1}] 上找不到名为 [{0}] 的公共静态字段
