--- a/java/org/apache/catalina/servlets/LocalStrings_zh_CN.properties
+++ b/java/org/apache/catalina/servlets/LocalStrings_zh_CN.properties
@@ -43,6 +43,8 @@ defaultServlet.blockExternalEntity2=阻止访问名为[{0}]、publicId[{1}]、ba
 defaultServlet.blockExternalSubset=用名称[{0}]和baseURI[{1}]阻止对外部子集的访问
 defaultServlet.directory.parent=最多[{0}]
 defaultServlet.directory.title=[{0}]的目录列表
+defaultServlet.globalXSLTTooBig=全局XSLT文件[{0}]太大，无法缓冲
+defaultServlet.invalidRedirectStatusCode=无效的重定向状态码[{0}]
 defaultServlet.missingResource=请求的资源[{0}]不可用
 defaultServlet.noResources=找不到静态资源
 defaultServlet.readerCloseFailed=无法关闭读卡器
