--- a/java/org/apache/coyote/http11/LocalStrings_zh_CN.properties
+++ b/java/org/apache/coyote/http11/LocalStrings_zh_CN.properties
@@ -25,6 +25,7 @@ abstractHttp11Protocol.upgradeJmxRegistrationFail=JMX升级协议注册失败
 http11processor.fallToDebug=\n\
 \ 注意：HTTP请求解析错误的进一步发生将记录在DEBUG级别。
 http11processor.header.parse=解析 HTTP 请求 header 错误
+http11processor.noParser=在HTTP协议处理程序上没有找到HttpParser，它应该在初始化时创建
 http11processor.request.finish=完成请求时出错
 http11processor.request.inconsistentHosts=请求行中指定的主机与主机头不一致。
 http11processor.request.invalidScheme=HTTP请求包含具有无效方案的绝对URL
