--- a/java/org/apache/jasper/resources/LocalStrings_zh_CN.properties
+++ b/java/org/apache/jasper/resources/LocalStrings_zh_CN.properties
@@ -92,6 +92,7 @@ jsp.error.invalid.implicit=[{0}]处标记文件的隐式TLD无效
 jsp.error.invalid.implicit.version=[{0}]处标记文件的隐式TLD中定义的JSP版本无效。
 jsp.error.invalid.scope=非法的scope属性值：[{0}]（必须是page、request、session或application中的一个）
 jsp.error.invalid.tagdir=标签文件目录 [{0}] 不以"/WEB-INF/tags"开头
+jsp.error.invalid.varscope=无效的变量范围[{0}]
 jsp.error.invalid.version=为标签 [{0}] 定义了无效的 JSP 版本号
 jsp.error.ise_on_clear=当缓存大小等于0时调用clear()函数是非法的
 jsp.error.java.line.number=在生成的java文件中的第：[{0}]行发生错误：[{1}]
@@ -208,6 +209,7 @@ jsp.error.tag.invalid.iselignored=Tag指令:对isELIgnored来说是无效值
 jsp.error.tag.invalid.trimdirectivewhitespaces=Tag指令：trimDirectiveWhitespaces的值无效
 jsp.error.tag.language.nonjava=标记指令：无效的语言属性。
 jsp.error.tag.multi.pageencoding=Tag指令不能多次出现pageencoding
+jsp.error.tagHandlerPool=无法创建tag处理程序池[{0}]
 jsp.error.tagdirective.badbodycontent=标签指令中的无效的内容体[{0}]
 jsp.error.tagfile.badSuffix=在文件路径[{0}]下找不到".tag"的后缀
 jsp.error.tagfile.illegalPath=非法的标记文件路径：[{0}]，必须以“/WEB-INF/tags”或“/META-INF/tags”开头。
