--- a/java/org/apache/tomcat/util/buf/LocalStrings_zh_CN.properties
+++ b/java/org/apache/tomcat/util/buf/LocalStrings_zh_CN.properties
@@ -30,6 +30,9 @@ encodedSolidusHandling.invalid=值[{0}]未识别
 hexUtils.fromHex.nonHex=输入只能由十六进制数字组成
 hexUtils.fromHex.oddDigits=输入必须由偶数个十六进制数字组成
 
+toStringUtil.classpath.platform=JRE提供的类
+toStringUtil.classpath.unknown=未知-非URLClassLoader实例
+
 uDecoder.eof=文件结尾（EOF）
 uDecoder.isHexDigit=十六进制编码无效
 uDecoder.noSlash=不允许使用编码的斜杠字符
