--- a/java/org/apache/tomcat/util/http/parser/LocalStrings_zh_CN.properties
+++ b/java/org/apache/tomcat/util/http/parser/LocalStrings_zh_CN.properties
@@ -55,5 +55,6 @@ sf.numeric.decimalInvalidFinal=十进制最后一个字符必须是数字
 sf.numeric.decimalPartTooLong=小数点后超过3位
 sf.numeric.decimalTooLong=小数位数超过了16个字符
 sf.numeric.integerTooLong=一个整数中发现超过15位数字
+sf.numeric.integralPartTooLong=小数的整数部分超过了12位数字
 sf.string.invalidCharacter=字符串中[{0}]字符无效
 sf.string.invalidEscape=[{0}]字符不能被转义
