--- a/java/org/apache/tomcat/websocket/LocalStrings_zh_CN.properties
+++ b/java/org/apache/tomcat/websocket/LocalStrings_zh_CN.properties
@@ -43,6 +43,8 @@ caseInsensitiveKeyMap.nullKey=不允许 Key 是 Null
 clientEndpointHolder.instanceCreationFailed=未能创建WebSocketEndpoint
 clientEndpointHolder.instanceRegistrationFailed=无法向InstanceManager注册Endpoint实例
 
+digestAuthenticator.algorithm=无法生成请求摘要[{0}]
+
 futureToSendHandler.timeout=等待[{0}][{1}]完成后操作超时。
 
 perMessageDeflate.alreadyClosed=转换器已经关闭且可能永远不会使用
