--- a/java/org/apache/catalina/connector/LocalStrings_zh_CN.properties
+++ b/java/org/apache/catalina/connector/LocalStrings_zh_CN.properties
@@ -41,6 +41,7 @@ coyoteConnector.protocolHandlerResumeFailed=协议处理程序恢复失败
 coyoteConnector.protocolHandlerStartFailed=协议处理器启动失败
 coyoteConnector.protocolHandlerStopFailed=协议处理程序.停止失败
 
+coyoteInputStream.blockingOnly=当输入流是非阻塞模式时可能不会调用这个方法（也就是配置了ReadListener之后）
 coyoteInputStream.nbNotready=在非阻塞模式下，只有之前的读数据完成，并且isReady()方法返回true，你才可以使用 ServletInputStream 读取数据
 coyoteInputStream.null=输入缓冲对象已被回收，不再与此外观关联\n
 
@@ -52,6 +53,7 @@ coyoteRequest.attributeEvent=属性事件侦听器引发的异常
 coyoteRequest.authenticate.ise=):提交响应后无法调用authenticate()
 coyoteRequest.changeSessionId=无法更改 session ID。 没有与此请求关联的 session。
 coyoteRequest.chunkedPostTooLarge=由于请求参数数据太大，导致参数不能解析。因为当前请求是块状请求，后续也不会处理。如果应用程序需要接收大的POST请求，可以使用连接器的maxPostSize解决它。
+coyoteRequest.deletePartFailed=删除[{0}]部分的临时文件失败
 coyoteRequest.filterAsyncSupportUnknown=无法确定是否有任何过滤器不支持异步处理
 coyoteRequest.getContextPath.ise=找不到规范上下文路径[{0}]与用户代理[{1}]提供的URI之间的匹配项。
 coyoteRequest.getInputStream.ise=已为此请求调用getReader（）
