--- a/java/org/apache/catalina/manager/host/LocalStrings_zh_CN.properties
+++ b/java/org/apache/catalina/manager/host/LocalStrings_zh_CN.properties
@@ -34,6 +34,7 @@ hostManagerServlet.listed=OK - 已列出Host
 hostManagerServlet.managerXml=FAIL - 无法安装manager.xml
 hostManagerServlet.noCommand=失败 - 未指定命令
 hostManagerServlet.noHost=失败 - 主机名称[{0}]不存在
+hostManagerServlet.noStoreConfig=失败 - 请开启StoreConfig后使用这个特性
 hostManagerServlet.noWrapper=容器未给当前servlet设置setWrapper()
 hostManagerServlet.persist=持久化: 正在持久化当前配置
 hostManagerServlet.persistFailed=失败 - 无法持久化配置
