--- a/java/org/apache/catalina/startup/LocalStrings_zh_CN.properties
+++ b/java/org/apache/catalina/startup/LocalStrings_zh_CN.properties
@@ -69,6 +69,7 @@ contextConfig.invalidSciHandlesTypes=无法为核对一个或多个ServletConten
 contextConfig.jarFile=无法处理Jar[{0}]的注解
 contextConfig.jspFile.error=JSP文件[{0}]必须以''/''开头。
 contextConfig.jspFile.warning=警告：在Servlet 2.4 中，JSP文件[{0}]必须以‘/’开头
+contextConfig.loadError=加载生成的代码错误
 contextConfig.missingRealm=对应的认证领域未配置
 contextConfig.noAntiLocking=配置 java.io.tmpdir的值[{0}]未指向有效路径。Web应用[{1}]antiResourceLocking配置将被忽略
 contextConfig.processAnnotationsDir.debug=使用注解 [{0}]扫描目录中的类文件
