--- a/java/org/apache/tomcat/util/net/openssl/ciphers/LocalStrings_zh_CN.properties
+++ b/java/org/apache/tomcat/util/net/openssl/ciphers/LocalStrings_zh_CN.properties
@@ -18,3 +18,4 @@
 
 opensslCipherConfigurationParser.effectiveCiphers=使用的密码：[{0}]
 opensslCipherConfigurationParser.unknownElement=密码字符串中的未知元素：[{0}]。
+opensslCipherConfigurationParser.unknownProfile=无法使用OpenSSL来解析配置文件[{0}]，它将作为密码套件传递
