--- a/java/org/apache/tomcat/util/threads/LocalStrings_zh_CN.properties
+++ b/java/org/apache/tomcat/util/threads/LocalStrings_zh_CN.properties
@@ -18,5 +18,9 @@
 
 taskQueue.notRunning=执行器未运行，无法强制命令进入队列
 
+threadPoolExecutor.invalidKeepAlive=核心线程必须有正数的存活时间
 threadPoolExecutor.queueFull=队列容量已满
+threadPoolExecutor.taskRejected=任务[{0}]被[{1}]拒绝
 threadPoolExecutor.threadStoppedToAvoidPotentialLeak=停止线程[{0}]，从而避免context停止后的潜在的内存泄漏
+
+virtualThreadExecutor.taskRejected=任务[{0}]被[{1}]拒绝
