Improvements to Chinese translations by leeyazhou.

--- a/java/org/apache/tomcat/util/buf/LocalStrings_zh_CN.properties
+++ b/java/org/apache/tomcat/util/buf/LocalStrings_zh_CN.properties
@@ -32,6 +32,9 @@ hexUtils.fromHex.oddDigits=输入必须由偶数个十六进制数字组成
 
 messageBytes.illegalCharacter=代码点[{1}]处的Unicode字符[{0}]无法编码，因为它超出了允许的0到255范围。
 
+toStringUtil.classpath.platform=JRE提供的类
+toStringUtil.classpath.unknown=未知-非URLClassLoader实例
+
 uDecoder.eof=文件结尾（EOF）
 uDecoder.isHexDigit=十六进制编码无效
 uDecoder.noSlash=不允许使用编码的斜杠字符
