--- a/java/org/apache/tomcat/util/http/LocalStrings_zh_CN.properties
+++ b/java/org/apache/tomcat/util/http/LocalStrings_zh_CN.properties
@@ -31,6 +31,7 @@ parameters.bytes=开始处理输入[{0}]
 parameters.copyFail=无法创建以调试日志记录为目的的原始参数值的副本
 parameters.decodeFail.debug=字符解码失败.参数 [{0}]和值 [{1}]被忽略
 parameters.decodeFail.info=字符解码失败。值为[{1}]的参数[{0}]已被忽略。请注意，此处引用的名称和值可能由于解码失败而损坏。使用调试级别日志记录查看原始的、未损坏的值。
+parameters.duplicateFail=创建查询参数副本失败
 parameters.emptyChunk=忽略空参数块
 parameters.fallToDebug=\n\
 \ 注：更多的参数错误将以DEBUG级别日志进行记录。
