Improvements to Chinese translations by leeyazhou.

--- a/java/org/apache/catalina/core/LocalStrings_zh_CN.properties
+++ b/java/org/apache/catalina/core/LocalStrings_zh_CN.properties
@@ -130,6 +130,8 @@ containerBase.realm.stop=停止旧域时出错
 containerBase.threadedStartFailed=子容器启动失败
 containerBase.threadedStopFailed=停止期间子容器失败
 
+contextNamingInfoListener.envEntry=添加上下文环境条目[{0}], 值是[{1}]
+
 defaultInstanceManager.invalidAnnotation=无效注解[{0}]
 defaultInstanceManager.invalidInjection=方法资源注入注解无效
 defaultInstanceManager.postConstructNotFound=类[{1}]的后构造方法[{0}]已在部署描述符中声明，但找不到
@@ -169,7 +171,9 @@ naming.wsdlFailed=未找到 wsdl 文件：[{0}]
 
 noPluggabilityServletContext.notAllowed=Servlet 3.0规范的第4.4节不允许从未在web.xml，web-fragment.xml文件中定义或未用@WebListener注释的ServletContextListener调用此方法。
 
+openssllistener.destroy=OpenSSL关闭失败
 openssllistener.initializeFIPSFailed=无法进入FIPS模式
+openssllistener.java22=Java 22中的FFM API不可用，使用OpenSSL需要Apache Tomcat Native
 openssllistener.sslInit=OpenSSL初始化失败
 
 propertiesRoleMappingListener.roleMappingFileEmpty=角色映射文件不能为空
