Improvements to French translations. (remm)

--- a/java/org/apache/catalina/servlets/LocalStrings_fr.properties
+++ b/java/org/apache/catalina/servlets/LocalStrings_fr.properties
@@ -57,6 +57,8 @@ defaultServlet.skipfail=La lecture a échouée parce que seuls [{0}] octets éta
 defaultServlet.unknownBomConfig=La valeur [{0}] inconnue a été donnée pour le paramètre d’initialisation useBomIfPresent
 defaultServlet.xslError=Erreur de transformation XSL
 
+webdavservlet.dataSourceStore.error=Erreur [{0}] lors du traitement des prorpiétés pour le chemin [{1}]
+webdavservlet.dataSourceStore.noDataSource=La DataSource [{0}] n''a pas été trouvé dans l''environnement de la webapp
 webdavservlet.externalEntityIgnored=La requête a inclus une référence à une entité externe avec publicId [{0}] et systemId [{1}] qui a été ignorée
 webdavservlet.inputstreamclosefail=Impossible de fermer le flux d''entrée pour [{0}]
 webdavservlet.jaxpfailed=Erreur d'initialisation de JAXP
