--- a/java/org/apache/tomcat/util/compat/LocalStrings_fr.properties
+++ b/java/org/apache/tomcat/util/compat/LocalStrings_fr.properties
@@ -17,3 +17,5 @@
 # To edit translations see: https://tomcat.apache.org/getinvolved.html#Translations
 
 jre22Compat.javaPre22=Le code est considéré être exécuté sur une JVM antérieure à Java 22 car la classe n'a pas été trouvée
+
+jre24Compat.javaPre24=Le code est considéré être exécuté sur une JVM antérieure à Java 24 car la méthode n'a pas été trouvée
