Improvements to Japanese translations by tak7iji.

--- a/java/org/apache/catalina/servlets/LocalStrings_ja.properties
+++ b/java/org/apache/catalina/servlets/LocalStrings_ja.properties
@@ -57,6 +57,8 @@ defaultServlet.skipfail=[{1}]バイトをスキップして要求された範囲
 defaultServlet.unknownBomConfig=useBomIfPresentの初期化パラメーターに提供された認識されない値 [{0}]
 defaultServlet.xslError=XSL変換エラー
 
+webdavservlet.dataSourceStore.error=パス [{1}] の無効なプロパティで [{0}] を処理中にエラーが発生しました
+webdavservlet.dataSourceStore.noDataSource=データソース [{0}] が webapp 環境に見つかりませんでした
 webdavservlet.externalEntityIgnored=PublicID [{0}]およびSystemID [{1}]を持つ外部エンティティへの参照を含むリクエストが無視されました
 webdavservlet.inputstreamclosefail=入力ストリーム [{0}] を切断できません。
 webdavservlet.jaxpfailed=JAXPの初期化に失敗しました
