--- a/java/org/apache/catalina/valves/LocalStrings_ja.properties
+++ b/java/org/apache/catalina/valves/LocalStrings_ja.properties
@@ -138,6 +138,12 @@ http.511.reason=Network Authentication Required
 loadBalancerDrainingValve.draining=ロードバランサは DISABLED 状態にあり、このノードを使用していません
 loadBalancerDrainingValve.skip=クライアントは有効な [{0}] Cookie を提示しているため、リバランスはスキップされています
 
+parameterLimitValve.closeError=設定をクローズする際のエラー
+parameterLimitValve.invalidLine=各行には少なくとも 1 つの ''='' が含まれている必要があります。無効な行 [{0}]
+parameterLimitValve.noConfiguration=構成リソースが見つかりません [{0}]
+parameterLimitValve.readConfiguration=[/WEB-INF/{0}] から設定を読み取ります
+parameterLimitValve.readError=設定の読み込みエラー
+
 patternTokenizer.unexpectedParenthesis=パターンに予期しない ')' があります
 
 persistentValve.acquireFailed=リクエスト [{0}] は、利用可能な許可がなかったため、セッションごとのセマフォを取得できませんでした
