--- a/java/org/apache/tomcat/util/compat/LocalStrings_ja.properties
+++ b/java/org/apache/tomcat/util/compat/LocalStrings_ja.properties
@@ -17,3 +17,5 @@
 # To edit translations see: https://tomcat.apache.org/getinvolved.html#Translations
 
 jre22Compat.javaPre22=クラスが見つからないため、コードが Java 22 以前の JVM で実行されていると仮定します
+
+jre24Compat.javaPre24=メソッドが見つからないため、コードはJava 24以前のJVMで実行されていると想定されます
