Improvements to French translations. (remm)

--- a/java/org/apache/catalina/valves/LocalStrings_fr.properties
+++ b/java/org/apache/catalina/valves/LocalStrings_fr.properties
@@ -141,6 +141,12 @@ jdbcAccessLogValve.exception=Exception en insérant l'entrée de l'accès
 loadBalancerDrainingValve.draining=Le balanceur de charge est dans l'étât DISABLED, le changement de répartition de la charge est sauté
 loadBalancerDrainingValve.skip=Le client a envoyé un cookie [{0}] valide, le le changement de répartition de la charge est sauté
 
+parameterLimitValve.closeError=Erreur lors de la fermeture de la configuration
+parameterLimitValve.invalidLine=Chaque ligne doit contenir au moins un caractère ''='', la ligne invalide est [{0}]
+parameterLimitValve.noConfiguration=La ressource de configuration [{0}] n''a pas été trouvée
+parameterLimitValve.readConfiguration=Lecture de la configuration à partir de [/WEB-INF/{0}]
+parameterLimitValve.readError=Erreur lors de la lecture de la configuration
+
 patternTokenizer.unexpectedParenthesis=')' inattendu dans le modèle
 
 persistentValve.acquireFailed=La requête pour [{0}] n''a pas obtenu le sémaphore associé à la session car aucun permis n''était disponible
