Improvements to French translations. (remm)

--- a/java/org/apache/tomcat/util/buf/LocalStrings_fr.properties
+++ b/java/org/apache/tomcat/util/buf/LocalStrings_fr.properties
@@ -45,6 +45,9 @@ toStringUtil.classpath.unknown=Inconnu - n'est pas une instance de URLClassLoade
 
 uDecoder.eof=Fin de fichier (EOF)
 uDecoder.isHexDigit=L'encodage hexadécimal est invalide
+uDecoder.noBackslash=Le caractère antislash encodé n'est pas autorisé
 uDecoder.noSlash=Un caractère slash encodé n'est pas autorisé
 uDecoder.urlDecode.conversionError=Echec de décodage [{0}] en utilisant le jeu de caractères [{1}]
 uDecoder.urlDecode.missingDigit=Impossible de décoder [{0}] parce que le caractère % doit être suivi de deux chiffres héxadécimaux
+uDecoder.urlDecode.rejectEncodedReverseSolidus=Echec du décodage de [{0}] car il contenait une séquence %5c que le décodeur est configuré pour rejeter
+uDecoder.urlDecode.rejectEncodedSolidus=Echec du décodage de [{0}] car il contenait une séquence %2f que le décodeur est configuré pour rejeter
