Improvements to Japanese translations by tak7iji.

--- a/java/org/apache/tomcat/util/buf/LocalStrings_ja.properties
+++ b/java/org/apache/tomcat/util/buf/LocalStrings_ja.properties
@@ -45,6 +45,9 @@ toStringUtil.classpath.unknown=Unknown - URLClassLoader のインスタンスで
 
 uDecoder.eof=予期せぬ場所で終端に達しました。
 uDecoder.isHexDigit=16進エンコーディングが無効です
+uDecoder.noBackslash=エンコードされたバックスラッシュ文字は許可されていません
 uDecoder.noSlash="/" を符号化して含めることはできません。
 uDecoder.urlDecode.conversionError=文字セット [{1}] を使用した [{0}] のデコードに失敗しました
 uDecoder.urlDecode.missingDigit=％文字の後ろに2つの16進数字が続く必要があるため、[{0}]のデコードに失敗しました。
+uDecoder.urlDecode.rejectEncodedReverseSolidus=デコーダが %5c シーケンスを拒否するように設定されているため、[{0}] はデコードできませんでした
+uDecoder.urlDecode.rejectEncodedSolidus=デコーダが %2f シーケンスを拒否するように設定されているため、[{0}] はデコードできませんでした
